16-Observability/Project-1/logging-ingress/ingress-kibana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  
spec:
  ingressClassName: nginx
  rules:
    - host: demo.158.158.93.96.nip.io
      http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
